# rake

./: .gitignore  LICENSE  Makefile  PLANNING.txt  README.md  dune  dune-project  flake.nix  rake.opam
bench/: README.md  dune  test_intersect.c
bench/arena/: arena.ml  dune
bench/lib/: compiler.ml  config.ml  dune  metrics.ml  report.ml  runner.ml
bench/suites/dsp/bend/: dsp.bend
bench/suites/dsp/c/: dsp.c
bench/suites/dsp/mojo/: dsp.mojo
bench/suites/dsp/odin/: dsp.odin
bench/suites/dsp/rake/: dsp.rk
bench/suites/dsp/rust/: dsp.rs
bench/suites/dsp/zig/: dsp.zig
bench/suites/filters/bend/: filters.bend
bench/suites/filters/c/: filters.c
bench/suites/filters/mojo/: filters.mojo
bench/suites/filters/odin/: filters.odin
bench/suites/particles/: harness.c
docs/: MASTER_PLAN.md  ROADMAP.md  TODO.md
docs/spec/: 00_TOC.md  00_overview.md  01_Part-I.md  01_types.md  02_functions.md  03_tines_and_through.md  04_operations.md  05_mlir_mapping.md
examples/: audio.rk  benchmark.c  benchmark.sh  compile.sh  intersect_flat.rk  mandelbrot.rk  minimal.rk  over_test.rk  particles.c  particles_llvm.mlir  raytracer_demo.c  render_sphere.c  simple.rk  standalone_raytracer.rk  test_raytracer.c
examples/particles_rust/: Cargo.toml
examples/raytracing/: intersect.rk
lib/: ast.ml  check.ml  dune  emit.ml  ir.ml  lexer.mll  lower.ml  mlir.ml  parser.mly  pretty.ml  typecheck.ml  types.ml
mytests/: hello_world.rk
scripts/: build_demo.sh  build_rake.sh  build_sdl_demo.sh  build_vulkan_demo.sh  compile.sh
stdlib/: prelude.rk
(+45 files in other folders)
